# agentic-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample_evals.jsonl
.omc/state/: agent-replay-a93999f9-2c63-483c-97b3-ec4508ee425d.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
benchmarks/: golden_mdn.jsonl
docker/grafana/provisioning/dashboards/: agentic-rag.json  agentic-search.json  dashboard.yml
docker/prometheus/: prometheus.yml
docs/benchmarks/: 2026-07-11-scale-test.md
docs/superpowers/plans/: 2026-07-11-agentic-rag-demo.md  2026-07-11-enterprise-ingest.md  2026-07-11-enterprise-media-acl.md  2026-07-11-history-faq.md  2026-07-11-scale-test.md  2026-07-11-semantic-cache-evals.md  2026-07-12-query-routing.md  2026-07-14-fastapi-service-observability.md
docs/superpowers/specs/: 2026-07-11-agentic-rag-demo-design.md  2026-07-14-fastapi-service-observability-design.md
sample_docs/: acl.json  faq.md  membership.md  menu.md  operations.md
src/agentic_rag/: acl.py  cache.py  chat.py  config.py  evals.py  faq.py  graph.py  ingest.py  llm.py  media.py  preflight.py  retrieval.py  tools.py
src/agentic_rag/server/: __init__.py  __main__.py  app.py  logging_config.py  metrics.py  resources.py  routes.py  schemas.py
src/agentic_search/: acl.py  cache.py  chat.py  config.py  evals.py  faq.py  graph.py  ingest.py  llm.py  media.py  parsers.py  preflight.py  retrieval.py  search.py  tools.py
src/agentic_search/server/: __init__.py  __main__.py  app.py  logging_config.py  metrics.py  resources.py  routes.py  schemas.py
tests/: conftest.py  test_acl.py  test_cache.py  test_config.py  test_evals.py  test_faq.py  test_grafana_dashboard.py  test_graph_routing.py  test_incremental.py  test_ingest.py  test_llm.py  test_media.py  test_parsers.py  test_preflight.py  test_preflight_status.py  test_retrieval.py  test_search.py  test_server_app.py  test_server_chat.py  test_server_config.py  test_server_ingest.py  test_server_logging.py  test_server_metrics.py  test_server_resources.py  test_server_schemas.py  test_tools.py
