[project]
name = "agentic-rag"
version = "0.1.0"
description = "LangChain + LangGraph 本地 agentic RAG"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.2.60",
    "langchain-ollama>=0.3",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "pymupdf4llm>=1.28.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "faster-whisper>=1.2.1",
    "av>=18.0.0",
    "pillow>=12.3.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]
