[project]
name = "agentic-search"
version = "0.1.0"
description = "本地 RAG + Web 搜索双通道的 agentic search 引擎(LangChain + LangGraph)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.2.60",
    "langchain-ollama>=0.3",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "pymupdf4llm>=1.28.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
# vLLM 后端(BACKEND=vllm):OpenAI 兼容客户端;装了才需要:uv sync --extra vllm
vllm = ["langchain-openai>=0.2"]
# 服务层(FastAPI + SSE + 指标 + 结构化日志);CLI-only 安装不需要:uv sync --extra server
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "httpx>=0.27",
    "pydantic>=2",
]

[dependency-groups]
dev = ["pytest>=8.0"]
media = [
    "faster-whisper>=1.2.1",
    "av>=18.0.0",
    "pillow>=12.3.0",
]

[tool.uv]
default-groups = ["dev", "media"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_search"]
